# cmux

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
CLI/: ClaudeHookHelpers.swift  cmux.swift
GhosttyTabs.xcodeproj/: project.pbxproj
Resources/shell-integration/: cmux-bash-integration.bash  cmux-zsh-integration.zsh
Sources/: AppDelegate.swift  GhosttyTerminalView.swift  Workspace.swift
Sources/Panels/: BrowserPanel.swift  BrowserPanelView.swift
cmux-core/: Cargo.toml
cmuxTests/: ClaudeHookHelpersTests.swift  CmuxWebViewKeyEquivalentTests.swift  GhosttyConfigTests.swift
cmuxUITests/: BrowserPaneNavigationKeybindUITests.swift
docs/: cmux-mcp-server.md
roadmap/: DESIGN.md
scripts/: cmux-mcp-server.mjs  cmux_mcp_server.py
